--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.speedandroid.libviewsandutils.views.CenterDrawableTextView
+        android:layout_width="150dp"
+        android:gravity="center"
+        app:topDrawable="@mipmap/ic_launcher"
+        app:topDrawableHeight="15dp"
+        app:topDrawableWidth="15dp"
+        android:drawablePadding="8dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="80dp"
+        android:text="Test My View"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
