--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.speedandroid.libviewsandutils.views.CenterDrawableTextView
-        android:layout_width="150dp"
+        android:layout_width="180dp"
         android:gravity="center"
         app:topDrawable="@mipmap/ic_launcher"
-        app:topDrawableHeight="15dp"
-        app:topDrawableWidth="15dp"
+        app:rightDrawable="@mipmap/ic_launcher"
+        app:rightDrawableHeight="15dp"
+        app:rightDrawableWidth="15dp"
         android:drawablePadding="8dp"
         android:layout_height="wrap_content"
         android:layout_margin="80dp"
